*5635* grid.tpl: When first column becomes too small then row actions will wrap and some are no longer visible.

--- a/styles/content.css
+++ b/styles/content.css
@@ -159,6 +159,7 @@ div.grid tr.category td {
 	vertical-align: middle;
 	overflow: hidden;
 	padding-left: 20px;
+	white-space: nowrap;
 }
 
 .row_controls a {
